--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,28 @@
 {
     "home": {
-    "title": "Hello, I'm Virginia — Product Designer",
-    "subtitle": "I craft intuitive, accessible and engaging user experiences.",
-    "cta": "View my work"
-  },
+        "title": "Hello, I'm Virginia — Product Designer",
+        "subtitle": "I craft intuitive, accessible and engaging user experiences.",
+        "cta": "View my work"
+    },
+    "header": {
+        "experience": "Experience",
+        "education": "Education",
+        "caseStudies": "Case Studies",
+        "contact": "Contact"
+    },
+    "experience": {
+        "title": "Experience",
+        "items": [
+            {
+                "position": "Product Designer",
+                "company": "Staff & Go",
+                "location": "France",
+                "period": "Jul 2023 – Sep 2024",
+                "description": "Led the design system and collaborated closely with developers to implement component libraries from scratch."
+            }
+        ]
+    },
+
     "welcome": "Hi, my name is Virginia",
     "description": "I’m a Product Designer with more than 6 years experience and a background in FrontEnd development.",
     "downloadResume": "Download resume",
