footer text change

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,7 @@
     },
     "footer": {
         "copyright": "© Virginia Martínez. All rights reserved.",
-        "madeWith": "Made with React & Tailwind CSS",
+        "madeWith": "Designed in Figma, built with React & Tailwind CSS",
         "linkedin": "LinkedIn",
         "github": "GitHub",
         "email": "Email"
